--- a/PhotoStorage/Base.lproj/Main.storyboard
+++ b/PhotoStorage/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Photo List View Controller-->
+        <!--Photos-->
         <scene sceneID="bhh-BN-z9H">
             <objects>
                 <tableViewController id="N8p-rC-2LM" customClass="PhotoListViewController" customModule="PhotoStorage" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,14 @@
                             <outlet property="delegate" destination="N8p-rC-2LM" id="A8s-9K-D9d"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="VDk-tQ-A37"/>
+                    <navigationItem key="navigationItem" title="Photos" id="VDk-tQ-A37">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="7GW-Ca-0Af">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="N8p-rC-2LM" id="cUE-tF-Lrw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Zc-Fj-pJQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -44,6 +51,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Nfb-Dm-lK9">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" systemColor="systemGreenColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -58,6 +69,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
